modules/security_group/main.tf
##### Security Group for ALB #####

resource "aws_security_group" "alb" {
  name   = "${var.environment}-alb"
  vpc_id = var.vpc_id
}

resource "aws_security_group_rule" "alb_http" {
  type              = "ingress"
  from_port         = 80
  to_port           = 80
  protocol          = "tcp"
  cidr_blocks       = ["0.0.0.0/0"]
  security_group_id = aws_security_group.alb.id
}

resource "aws_security_group_rule" "alb_https" {
  type              = "ingress"
  from_port         = 443
  to_port           = 443
  protocol          = "tcp"
  cidr_blocks       = ["0.0.0.0/0"]
  security_group_id = aws_security_group.alb.id
}

resource "aws_security_group_rule" "alb_egress" {
  type              = "egress"
  from_port         = 0
  to_port           = 0
  protocol          = "-1"
  cidr_blocks       = ["0.0.0.0/0"]
  security_group_id = aws_security_group.alb.id
}


##### Security Group for EC2 Bastion #####

resource "aws_security_group" "ec2_bastion" {
  name   = "${var.environment}-ec2-bastion"
  vpc_id = var.vpc_id
}

resource "aws_security_group_rule" "ec2_bastion_ssh" {
  type              = "ingress"
  from_port         = 22
  to_port           = 22
  protocol          = "tcp"
  cidr_blocks       = [var.bastion_ssh_permitted_cidr]
  security_group_id = aws_security_group.ec2_bastion.id
}

resource "aws_security_group_rule" "ec2_bastion_egress" {
  type              = "egress"
  from_port         = 0
  to_port           = 0
  protocol          = "-1"
  cidr_blocks       = ["0.0.0.0/0"]
  security_group_id = aws_security_group.ec2_bastion.id
}


##### Security Group for EC2 #####

resource "aws_security_group" "ec2" {
  name   = "${var.environment}-ec2"
  vpc_id = var.vpc_id
}

resource "aws_security_group_rule" "ec2_ssh" {
  type                     = "ingress"
  from_port                = 22
  to_port                  = 22
  protocol                 = "tcp"
  source_security_group_id = aws_security_group.ec2_bastion.id
  security_group_id        = aws_security_group.ec2.id
}

resource "aws_security_group_rule" "ec2_http" {
  type                     = "ingress"
  from_port                = 80
  to_port                  = 80
  protocol                 = "tcp"
  source_security_group_id = aws_security_group.alb.id
  security_group_id        = aws_security_group.ec2.id
}

resource "aws_security_group_rule" "ec2_egress" {
  type              = "egress"
  from_port         = 0
  to_port           = 0
  protocol          = "-1"
  cidr_blocks       = ["0.0.0.0/0"]
  security_group_id = aws_security_group.ec2.id
}


##### Security Group for RDS #####

resource "aws_security_group" "rds" {
  name   = "${var.environment}-rds"
  vpc_id = var.vpc_id
}

resource "aws_security_group_rule" "rds_mysql" {
  type                     = "ingress"
  from_port                = 3306
  to_port                  = 3306
  protocol                 = "tcp"
  source_security_group_id = aws_security_group.ec2.id
  security_group_id        = aws_security_group.rds.id
}

resource "aws_security_group_rule" "rds_egress" {
  type              = "egress"
  from_port         = 0
  to_port           = 0
  protocol          = "-1"
  cidr_blocks       = ["0.0.0.0/0"]
  security_group_id = aws_security_group.rds.id
}
